@@ -14,6 +14,12 @@ plugins {
 
   // Checker Framework pluggable type-checking
   id 'org.checkerframework' version '0.6.43'
+
+  // GraalVM native compilation
+  id 'org.graalvm.buildtools.native' version '0.10.2'
+
+  // To show Gradle dependencies, run: ./gradlew SOMETASKNAME taskTree
+  id "com.dorongold.task-tree" version "4.0.0"
 }
 
 repositories {
@@ -124,6 +130,37 @@ spotless {
 
 application {
   mainClass = 'org.plumelib.merging.Main'
+}
+
+graalvmNative {
+  binaries {
+    main {
+      imageName = "plumelib-merge"
+      mainClass = "org.plumelib.merging.Main"
+      buildArgs.add("-O4")
+    }
+    test {
+      buildArgs.add("-O0")
+    }
+  }
+  binaries.all {
+    buildArgs.add("--verbose")
+    // These arguments are from google-java-format's core/pom.xml.
+    buildArgs.add("-H:+UnlockExperimentalVMOptions")
+    buildArgs.add("-H:IncludeResourceBundles=com.sun.tools.javac.resources.compiler")
+    buildArgs.add("-H:IncludeResourceBundles=com.sun.tools.javac.resources.javac")
+    buildArgs.add("--no-fallback")
+    buildArgs.add("--initialize-at-build-time=com.sun.tools.javac.file.Locations")
+    buildArgs.add("-H:+ReportExceptionStackTraces")
+    buildArgs.add("-H:-UseContainerSupport")
+    buildArgs.add("-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
+    buildArgs.add("-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
+    buildArgs.add("-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED")
+    buildArgs.add("-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
+    buildArgs.add("-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+    buildArgs.add("-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+    buildArgs.add("-march=compatibility")
+  }
 }
 
 /// Error Prone linter
